--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     "johnpbloch/wordpress": "4.4.2",
     "oscarotero/env": "^1.0",
     "roots/wp-password-bcrypt": "1.0.0",
+    "wpackagist-plugin/social": "^3.1",
     "wpackagist-plugin/akismet": "^3.1",
     "wpackagist-plugin/tinymce-advanced": "^4.2",
     "wpackagist-plugin/wp-super-cache": "^1.4",
